--- a/linkedIn-learning-free-courses.html
+++ b/linkedIn-learning-free-courses.html
@@ -422,7 +422,7 @@
                         </ul>
                     </ul>
                     <br>
-                    <p class="card-text text-white"><a href="linkedIn-learning2-free-courses.html" class="text-white text-decoration-none">See More <i class="bi bi-arrow-right-short"></i></a></p>
+                    <p class="card-text text-white"><a href="linkedIn-learning2-free-courses.html" class="text-white text-decoration-none">Next <i class="bi bi-arrow-right-short"></i></a></p>
                 </div>
             </div>
         </section>
