removed .html extension

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <p class="text-white mx-auto d-block" style="margin-top: 30px;">Learn anything, anywhere for free with <b style="color: rgb(9, 218, 255);">SkillsFree</b> lists of courses from reputable learning platforms.</p>
 
-                <a href="donate.html"><button type="button" class="btn btn-info" style="margin-top:20px;">Donate</button></a>
+                <a href="donate"><button type="button" class="btn btn-info" style="margin-top:20px;">Donate</button></a>
                 <p class="text-white"><i>Your donations will be a gift for others.</i></p>
             </div>
             <div class="col-sm-6">
@@ -49,7 +49,7 @@
                     <div class="card bg-dark">
                         <img src="img/udemy2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="udemy-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                            <p class="card-text text-white text-center"><a href="udemy-free-courses" class="text-decoration-none text-white">View Courses</a></p>
                         </div>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                     <div class="card bg-dark">
                         <img src="img/coursera2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                            <p class="card-text text-white text-center"><a href="coursera-free-courses" class="text-decoration-none text-white">View Courses</a></p>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                     <div class="card bg-dark">
                         <img src="img/edx2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="edx-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                            <p class="card-text text-white text-center"><a href="edx-free-courses" class="text-decoration-none text-white">View Courses</a></p>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                     <div class="card bg-dark" style="margin-top: 10px;">
                         <img src="img/linkedin2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="linkedIn-learning-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                            <p class="card-text text-white text-center"><a href="linkedIn-learning-free-courses" class="text-decoration-none text-white">View Courses</a></p>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                     <div class="card bg-dark">
                         <img src="img/google2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="google.html" class="text-decoration-none text-white">View Courses</a></p>
+                            <p class="card-text text-white text-center"><a href="google" class="text-decoration-none text-white">View Courses</a></p>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                     <div class="card bg-dark" style="margin-top: 10px;">
                         <img src="img/microsoft2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="microsoft-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                            <p class="card-text text-white text-center"><a href="microsoft-free-courses" class="text-decoration-none text-white">View Courses</a></p>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     <div class="card bg-dark">
                         <img src="img/amazon2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="amazon-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                            <p class="card-text text-white text-center"><a href="amazon-free-courses" class="text-decoration-none text-white">View Courses</a></p>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                     <div class="card bg-dark" style="margin-top: 10px;">
                         <img src="img/cisco2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="cisco-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                            <p class="card-text text-white text-center"><a href="cisco-free-courses" class="text-decoration-none text-white">View Courses</a></p>
                         </div>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                         <img src="img/freecodecamp2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
 
                         <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="freecodecamp-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                            <p class="card-text text-white text-center"><a href="freecodecamp-free-courses" class="text-decoration-none text-white">View Courses</a></p>
                         </div>
                     </div>
 
