removed .html extension

--- a/amazon-free-courses.html
+++ b/amazon-free-courses.html
@@ -31,7 +31,7 @@
                         <p class="text-white mx-auto d-block" style="margin-top: -30px;">AWS Training and Certification helps you build and validate your skills so you can get more out of the cloud. ... Whether you are just starting out, building on existing IT skills, or sharpening your cloud knowledge, AWS Training
                             and Certification can help you be more effective and do more in the cloud.</p>
 
-                        <a href="donate.html"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
+                        <a href="donate"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
                         <p class="text-white"><i>Your donations will be a gift for others.</i></p>
                     </div>
                     <div class="col-sm-6">
