removed .html extension

--- a/header.html
+++ b/header.html
@@ -18,10 +18,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav mx-auto">
-                <a class="nav-item nav-link active text-white css-hover" href="home.html"><b>Home</b></a>
-                <a class="nav-item nav-link text-white css-hover" href="index.html"><b>Free Courses</b></a>
-                <a class="nav-item nav-link text-white css-hover" href="contact.html"><b>Contact</b></a>
-                <a class="nav-item nav-link text-white css-hover" href="donate.html"><b>Donate</b></a>
+                <a class="nav-item nav-link active text-white css-hover" href="home"><b>Home</b></a>
+                <a class="nav-item nav-link text-white css-hover" href="index"><b>Free Courses</b></a>
+                <a class="nav-item nav-link text-white css-hover" href="contact"><b>Contact</b></a>
+                <a class="nav-item nav-link text-white css-hover" href="donate"><b>Donate</b></a>
             </div>
         </div>
     </nav>
