--- a/edx-free-courses.html
+++ b/edx-free-courses.html
@@ -30,7 +30,7 @@
                     <p class="text-white mx-auto d-block" style="margin-top: -10px;"><a href="https://www.edx.org/" class="text-decoration-none" style=" color: rgb(9, 218, 255);">edX</a> is an American massive open online course provider created by Harvard and MIT. It hosts online university-level courses in a wide
                         range of disciplines to a worldwide student body, including some courses at no charge. It also conducts research into learning based on how people use its platform.</p>
 
-                    <a href="donate.html"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
+                    <a href="donate"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
                     <p class="text-white"><i>Your donations will be a gift for others.</i></p>
                 </div>
                 <div class="col-sm-6">
