--- a/freecodecamp-free-courses.html
+++ b/freecodecamp-free-courses.html
@@ -30,7 +30,7 @@
                     <p class="text-white mx-auto d-block" style="margin-top: -30px;">freeCodeCamp is a non-profit organization that consists of an interactive learning web platform, an online community forum, chat rooms, online publications and local organizations that intend to make learning web development accessible
                         to anyone. </p>
 
-                    <a href="donate.html"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
+                    <a href="donate"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
                     <p class="text-white"><i>Your donations will be a gift for others.</i></p>
                 </div>
                 <div class="col-sm-6">
