--- a/linkedIn-learning2-free-courses.html
+++ b/linkedIn-learning2-free-courses.html
@@ -30,7 +30,7 @@
                     <p class="text-white mx-auto d-block" style="margin-top: -30px;"><a href="https://www.linkedin.com/learning/" class="text-decoration-none" style=" color: rgb(9, 218, 255);">LinkedIn Learning</a> is an American website offering video courses taught by industry experts in software, creative, and business
                         skills. It is a subsidiary of LinkedIn. All the courses on LinkedIn fall into 3 categories: Business, Creative, and Technology</p>
 
-                    <a href="donate.html"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
+                    <a href="donate"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
                     <p class="text-white"><i>Your donations will be a gift for others.</i></p>
                 </div>
                 <div class="col-sm-6">
@@ -396,7 +396,7 @@
                         </li>
                     </ul>
                     <br>
-                    <p class="card-text text-white"><a href="linkedIn-learning-free-courses.html" class="text-white text-decoration-none"><i class="bi bi-arrow-left-short"></i> Prev</a></p>
+                    <p class="card-text text-white"><a href="linkedIn-learning-free-courses" class="text-white text-decoration-none"><i class="bi bi-arrow-left-short"></i> Prev</a></p>
                 </div>
             </div>
         </section>
