removed .html extension

--- a/microsoft-free-courses.html
+++ b/microsoft-free-courses.html
@@ -29,7 +29,7 @@
 
                     <p class="text-white mx-auto d-block" style="margin-top: -30px;">Microsoft Corporation is an American multinational technology company with headquarters in Redmond, Washington. It develops, manufactures, licenses, supports, and sells computer software, consumer electronics, personal computers, and
                         related services.</p>
-                    <a href="donate.html"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
+                    <a href="donate"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
                     <p class="text-white"><i>Your donations will be a gift for others.</i></p>
                 </div>
                 <div class="col-sm-6">
