--- a/udemy-free-courses.html
+++ b/udemy-free-courses.html
@@ -30,7 +30,7 @@
 
                         <p class="text-white mx-auto d-block" style="margin-top: -30px;">Udemy is the leading global marketplace for teaching and learning, connecting millions of students to the skills they need to succeed.</p>
 
-                        <a href="donate.html"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
+                        <a href="donate"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
                         <p class="text-white"><i>Your donations will be a gift for others.</i></p>
                     </div>
                     <div class="col-sm-6">
