--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="sharethis-inline-share-buttons" style="margin: 50px 0 50px 0;"></div>
 
-            <div class="row">
+<!--             <div class="row">
                 <div class="col-sm-6" style="margin-top: 10px;">
                     <div class="card bg-dark">
                         <img src="img/udemy2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="row">
                 <div class="col-sm-6" style="margin-top: 10px;">
