--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container-fluid p-2" style="background-color: black;">
         <p class="text-white text-center"><small>© 2021 SkillsFree. All rights reserved.</small></p>
-        <p class="text-center" style=" color: rgb(9, 218, 255);"><small>Design by TephdySign & TephdyTech</small></p>
+        <p class="text-center" style=" color: rgb(9, 218, 255);"><small>Design by TephdySign & TephdyTech By Joseph Amandy</small></p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js "></script>
